modificando los errores y pasando al ingles

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="row">
                 <div class="col-sm-12 col-md-8 col-lg-6">
                     <div class="description">
-                        <h1 class="pt-6">Hola, Yo soy Juan</h1>
-                        <p>Desarrollador Web, Amante de la tecnología</p>
+                        <h1 class="pt-6">Hello, I am Juan</h1>
+                        <p>Web Developer, lover of technology</p>
                     </div>
                 </div>
             </div>
@@ -131,28 +131,28 @@
             <h2>Portfolio</h2>
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port3.jpg" alt=""></a>
+                    <a href="https://myecolimpio.com/" target="_blank"><img src="images/port3.jpg" alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port2.jpg" alt=""></a>
+                    <a href="https://juanctinizhanay.github.io/helloJuan/" target="_blank"><img src="images/port2.jpg" alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port1.JPG" alt=""></a>
+                    <a href="https://myecolimpio.com/calzado" target="_blank"><img src="images/port8.png"  alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port5.png" alt=""></a>
+                    <a href="https://juanctinizhanay.github.io/porttitor/" target="_blank"><img src="images/port5.png"  alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port6.png" alt=""></a>
+                    <a href="https://juanctinizhanay.github.io/portafolio/" target="_blank"><img src="images/port6.png"  alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port7.png" alt=""></a>
+                    <a href="https://gestor.myecolimpio.com/" target="_blank"><img src="images/port7.png"  alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port3.jpg" alt=""></a>
+                    <a href="https://myecolimpio.com/" target="_blank"><img src="images/port3.jpg"  alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href=""><img src="images/port2.jpg" alt=""></a>
+                    <a href="https://juanctinizhanay.github.io/helloJuan/" target="_blank"><img src="images/port2.jpg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p>Realizado por @juanctinizhanay</p>
+                    <p><i class="fa fa-copyright" aria-hidden="true">Copyright</i> @juanctinizhanay</p>
                 </div>
             </div>
         </div>
