--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row pt-4">
                 <div class="col-12 col-md-6 form-group">
                     <div class="bar-skill">
-                        <h5>HTML</h5>
+                        <h5>HTML5</h5>
                         <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                         </div>
@@ -48,13 +48,13 @@
                     <div class="bar-skill pt-4">
                         <h5>JS</h5>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="bar-skill pt-4">
                         <h5>PHP</h5>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -66,21 +66,21 @@
                         </div>
                     </div>
                     <div class="bar-skill pt-4">
+                        <h5>Bootstrap</h5>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="bar-skill pt-4">
                         <h5>Illustrator</h5>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="bar-skill pt-4">
-                        <h5>Photoshop</h5>
+                        <h5>MySQL</h5>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="bar-skill pt-4">
-                        <h5>HelDesk</h5>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <a href="https://juanctinizhanay.github.io/helloJuan/" target="_blank"><img src="images/port2.jpg" alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href="https://myecolimpio.com/calzado" target="_blank"><img src="images/port8.png"  alt=""></a>
+                    <a href="https://juanctinizhanay.github.io/brand/" target="_blank"><img src="images/port9.png" alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
                     <a href="https://juanctinizhanay.github.io/porttitor/" target="_blank"><img src="images/port5.png"  alt=""></a>
@@ -152,7 +152,7 @@
                     <a href="https://myecolimpio.com/" target="_blank"><img src="images/port3.jpg"  alt=""></a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-portfolio">
-                    <a href="https://juanctinizhanay.github.io/helloJuan/" target="_blank"><img src="images/port2.jpg" alt=""></a>
+                    <a href="https://juanctinizhanay.github.io/bootstrap-proyecto/" target="_blank"><img src="images/port4.jpg" alt=""></a>
                 </div>
             </div>
         </div>
